Updated Forms Page

--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -98,7 +98,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
     </div>
 
     <div id="incentive-box">
-      <span class="incentive-text">🎁 Complete this quiz <strong>now</strong> to get your <strong>free workout & meal plan</strong></span>
+      <span class="incentive-text">🎁 Complete this quiz <strong>now</strong> to get your <strong>full 12-Week Plan</strong></span>
       <button id="incentive-close" aria-label="Close">&times;</button>
     </div>
 
