Updated Offer Page

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -263,7 +263,7 @@
 
       <p class="kit-subcopy">
         Includes a foldable push-up board, ergonomic handles, and resistance bands — designed to target chest, back,
-        shoulders, and arms for effective home workouts. Available after purchase of the workout plan.
+        shoulders, and arms for effective home workouts.
       </p>
 
 
@@ -452,30 +452,30 @@
       </a>
     </p>
 
-<!-- Promo applied strip -->
-<div id="promoAppliedStrip" class="rtb-ps" hidden>
-  <div class="ps-top">
-    <div class="discount-badge">
-      51% OFF
-      <span class="badge-subline">+ FREE SHIPPING</span>
-    </div>
-    <h4 class="ps-title">Promo code applied!</h4>
-  </div>
+    <!-- Promo applied strip -->
+    <div id="promoAppliedStrip" class="rtb-ps" hidden>
+      <div class="ps-top">
+        <div class="discount-badge">
+          51% OFF
+          <span class="badge-subline">+ FREE SHIPPING</span>
+        </div>
+        <h4 class="ps-title">Promo code applied!</h4>
+      </div>
 
-  <div class="ps-bottom">
-    <!-- Code pill (left) -->
-    <code id="promoStripCode" class="rtb-ps__code" aria-label="Promo code"></code>
+      <div class="ps-bottom">
+        <!-- Code pill (left) -->
+        <code id="promoStripCode" class="rtb-ps__code" aria-label="Promo code"></code>
 
-    <!-- Timer (right) -->
-    <div class="ps-timer" aria-live="polite">
-      <div class="ps-time-value" id="promoStripTimer">10:00</div>
-      <div class="ps-time-labels">
-        <span>minutes</span>
-        <span>seconds</span>
+        <!-- Timer (right) -->
+        <div class="ps-timer" aria-live="polite">
+          <div class="ps-time-value" id="promoStripTimer">10:00</div>
+          <div class="ps-time-labels">
+            <span>minutes</span>
+            <span>seconds</span>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
 
 
@@ -571,9 +571,9 @@
             <span class="price-strikethrough" id="priceSpecialFull">£14.99</span>
             <span class="discount-price" id="priceSpecialDiscount">£0.00</span>
           </div>
-          <div class="best-seller-banner">
+          <!-- <div class="best-seller-banner">
             <strong><span class="crown-emoji">👑</span> <span class="banner-text">BEST VALUE</span></strong>
-          </div>
+          </div> -->
         </div>
 
         <div class="offer-right">
@@ -664,7 +664,9 @@
         <div class="bm-discount-card">
           <div class="bm-row">
             <div class="bm-left">
-              <div class="bm-pill">51% SPECIAL DISCOUNT</div>
+              <div class="bm-pill">51% OFF<br>
+                <span>+ FREE SHIPPING</span>
+              </div>
               <p class="bm-head"><strong>Calisthenics Essential Kit</strong></p>
             </div>
 
@@ -698,7 +700,8 @@
         <a href="refund-policy.html" target="_blank">refund policy</a>.
         If you choose the 12-Week Plan, it renews at
         <span class="renew-amt"></span>/month unless cancelled.
-        Cancellations take effect at the end of the current billing cycle. The Calisthenics Essential Kit is available after purchase of the workout plan.
+        Cancellations take effect at the end of the current billing cycle. The Calisthenics Essential Kit is available
+        after purchase of the workout plan.
       </p>
 
   </section>
