--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -452,6 +452,35 @@
       </a>
     </p>
 
+    <!-- Social proof (Trustpilot-style, no count) -->
+<div class="micro-proof tp" aria-label="Customer rating">
+  <div class="tp-left">
+    <span class="tp-label">Excellent</span>
+    <span class="tp-stars" aria-hidden="true">
+      <!-- 4 full + 1 half -->
+      <svg viewBox="0 0 20 20" class="tp-star full"><path d="M10 1.6l2.6 5.2 5.8.8-4.2 4.1 1 5.9-5.2-2.7-5.2 2.7 1-5.9L1.6 7.6l5.8-.8z"/></svg>
+      <svg viewBox="0 0 20 20" class="tp-star full"><path d="M10 1.6l2.6 5.2 5.8.8-4.2 4.1 1 5.9-5.2-2.7-5.2 2.7 1-5.9L1.6 7.6l5.8-.8z"/></svg>
+      <svg viewBox="0 0 20 20" class="tp-star full"><path d="M10 1.6l2.6 5.2 5.8.8-4.2 4.1 1 5.9-5.2-2.7-5.2 2.7 1-5.9L1.6 7.6l5.8-.8z"/></svg>
+      <svg viewBox="0 0 20 20" class="tp-star full"><path d="M10 1.6l2.6 5.2 5.8.8-4.2 4.1 1 5.9-5.2-2.7-5.2 2.7 1-5.9L1.6 7.6l5.8-.8z"/></svg>
+      <svg viewBox="0 0 20 20" class="tp-star half">
+        <defs><clipPath id="tp-half"><rect x="0" y="0" width="10" height="20"/></clipPath></defs>
+        <path d="M10 1.6l2.6 5.2 5.8.8-4.2 4.1 1 5.9-5.2-2.7-5.2 2.7 1-5.9L1.6 7.6l5.8-.8z" class="tp-outline"/>
+        <path d="M10 1.6l2.6 5.2 5.8.8-4.2 4.1 1 5.9-5.2-2.7-5.2 2.7 1-5.9L1.6 7.6l5.8-.8z" clip-path="url(#tp-half)" class="tp-fill"/>
+      </svg>
+    </span>
+    <span class="tp-score">4.8 out of 5</span>
+  </div>
+
+  <div class="tp-brand" aria-label="Trustpilot">
+    <!-- Trustpilot star mark -->
+    <svg class="tp-logo-star" viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M12 2.2l2.6 5.3 5.9.9-4.3 4.1 1 6L12 16l-5.2 2.5 1-6L3.5 8.4l5.9-.9L12 2.2z"/>
+    </svg>
+    <span class="tp-logo-text">Trustpilot</span>
+  </div>
+</div>
+
+
     <!-- Promo applied strip -->
     <div id="promoAppliedStrip" class="rtb-ps" hidden>
       <div class="ps-top">
@@ -661,42 +690,64 @@
       <div class="bm-discount-wrap">
         <div class="bm-plus">+</div>
 
-        <div class="bm-discount-card">
+        <div class="bm-discount-card" data-expanded="false">
           <div class="bm-row">
             <div class="bm-left">
               <div class="bm-pill">51% OFF<br>
                 <span>+ FREE SHIPPING</span>
               </div>
-              <p class="bm-head"><strong>Calisthenics Essential Kit</strong></p>
+              <p class="bm-head"><strong>Calisthenics <br> Essential Kit</strong></p>
             </div>
 
             <figure class="bm-media">
               <img src="../assets/home-workout-kit.jpg" alt="Calisthenics Essential Kit">
             </figure>
           </div>
+           <div class="additional-info" style="display: none;">
+            <h4>Compact Kit. Full-Body Results.</h4>
+            <ul class="offer-includes">
+              <li>🟦 <strong>Foldable push-up board</strong> with color-coded angles for chest, back &amp; shoulders.</li>
+              <li>✋ <strong>Ergonomic handle pair</strong> that locks in for a steady, wrist-friendly grip.</li>
+              <li>🟢 <strong>Multi-resistance bands + door anchor</strong> to scale every progression from home.</li>
+            </ul>
+          </div>
+
+          <div class="toggle-details">What’s Included?</div>
         </div>
       </div>
 
-<div class="total-price-summary" id="totalPriceSummary" aria-label="Total price">
-  <div class="tp-row full">
-    <span class="tp-label">Full price</span>
-    <span class="tp-val"><span id="tpFull"></span></span>
-  </div>
+<section class="order-summary" aria-labelledby="orderSummaryTitle">
+  <header class="os-head">
+    <h3 id="orderSummaryTitle" class="os-title">Order summary</h3>
+    <!-- <p class="os-sub">Includes everything above</p> -->
+  </header>
 
-  <div class="tp-row current">
-    <span class="tp-label"><strong>Current price</strong></span>
-    <span class="tp-val discount-price" id="tpNow"></span>
-  </div>
+  <!-- <ul class="os-includes" aria-label="Items included">
+    <li>12-Week Plan</li>
+    <li>Calisthenics Essential Kit</li>
+  </ul> -->
 
-  <div class="tp-row perday">
-    <span class="tp-label">≈ Per day</span>
-    <span class="tp-val">
-      <span class="cost-per-day" id="tpPerDay"></span>
-      <span class="per-day">&nbsp;per day</span>
-      <span class="currency-tag" id="tpCcy"></span>
-    </span>
+  <div class="total-price-summary" id="totalPriceSummary" aria-label="Total price">
+    <div class="tp-row full">
+      <span class="tp-label">Full price</span>
+      <span class="tp-val tp-strike"><span id="tpFull"></span></span>
+    </div>
+
+    <div class="tp-row current">
+      <span class="tp-label"><strong>Current price</strong></span>
+      <span class="tp-val tp-now" id="tpNow"></span>
+    </div>
+
+    <div class="tp-row perday">
+      <span class="tp-label">≈ Per day</span>
+      <span class="tp-val tp-perday">
+        <span class="cost-per-day" id="tpPerDay"></span>
+        <span class="per-day">per day</span>
+        <span class="currency-tag" id="tpCcy" aria-hidden="true"></span>
+      </span>
+    </div>
   </div>
-</div>
+</section>
 
       <p class="pricing-justification">
         Like having a personal trainer in your pocket — for less than the cost of one session.
